# ellipse_detection

./: CMakeLists.txt  README.md  main.cpp
